# ROS_quadrotor_simulator

action_controller/: CMakeLists.txt  package.xml
action_controller/src/: actionController.cpp
moveit_simple_controller_manager_mod/: CMakeLists.txt  moveit_simple_controller_manager_mod_plugin_description.xml  package.xml
moveit_simple_controller_manager_mod/include/moveit_simple_controller_manager/: action_based_controller_handle.h
moveit_simple_controller_manager_mod/src/: moveit_simple_controller_manager.cpp
quad_2dnav/: CMakeLists.txt  package.xml
quad_2dnav/launch/: quad_2dnav.launch
quad_3dnav/config/: ompl_planning.yaml  quad.srdf  sensors_kinect.yaml
quad_3dnav/launch/: move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  quad_3dnav.launch  quad_moveit_controller_manager.launch.xml  quad_rtab_embedded.launch  quad_rtab_embedded_no_gazebo.launch  quad_rtab_moveit.launch  quad_rtab_remote.launch  quad_rtab_remote_no_gazebo.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
quad_3dnav/resource/: moveit.rviz
quad_control/: CMakeLists.txt  package.xml
quad_control/include/quad_control/: quad_controller.h
quad_control/resource/: position_controller.yaml
quad_control/src/nodes/: attitude_controller_node.cpp  position_controller_node.cpp  position_controller_node.h  waypoint_publisher_node.cpp  waypoint_publisher_node.h
quad_description/maps/: global_costmap_params.yaml  local_costmap_params.yaml
quad_description/resource/: quad.rviz  quad_kinect.rviz  quad_laser.rviz
quad_description/urdf/: component_snippets.xacro  iris.xacro  iris_base.xacro  kit_c.urdf  kit_c.xacro  kit_c_base.xacro  kit_c_generic_odometry_sensor.gazebo  kit_c_irl.xacro  kit_c_kinect.xacro  multirotor_base.xacro  quad.gv
quad_description/urdf/sensors/: static_camera.urdf.xacro
quad_gazebo/launch/: quad_world.launch  spawn_quad_kinect _kitchen.launch~  spawn_quad_kinect_kitchen.launch~
quad_gazebo/launch/spawn/: spawn_quad_kinect_kitchen.launch
quad_joystick_interface/: CMakeLists.txt  package.xml
quad_joystick_interface/include/quad_joystick_interface/: joy.h
quad_joystick_interface/src/: joy.cpp
